name:                hoist-error
version:             0.1.0.0
synopsis:            Some convenience facilities for hoisting errors into a monad
license:             MIT
license-file:        LICENSE
author:              Jon Sterling
maintainer:          jon@jonmsterling.com
copyright:           Copyright (c) 2014 AlephCloud, Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
